client/assets/variables.scss
// nuxt.config の styleResources.scss で読み込む

/**
 * color
 */
$g-title-color: #fff;
$g-subtitle-color: rgba(255, 255, 255, 0.7);

$g-background-color: #1e2022;
$g-card-background-color: #2a2a2c;
$g-menu-background-color: #2e3032;
$g-footer-background-color: #343636;

/**
 * page layout
 */
$g-sm-breakpoint: 480px;
$g-md-breakpoint: 768px;
$g-lg-breakpoint: 992px;
$g-xl-breakpoint: 1200px;
$g-xxl-breakpoint: 1900px;

$__breakpoints: (
  sm: $g-sm-breakpoint,
  md: $g-md-breakpoint,
  lg: $g-lg-breakpoint,
  xl: $g-xl-breakpoint,
  xxl: $g-xxl-breakpoint,
);

@mixin smaller-than($key) {
  @media screen and (max-width: map-get($__breakpoints, $key)) {
    @content;
  }
}

@mixin larger-than($key) {
  @media screen and (min-width: calc(#{map-get($__breakpoints, $key)} + 1px)) {
    @content;
  }
}

// x <= 480
@mixin smaller-than-sm {
  @include smaller-than(sm) {
    @content;
  }
}
// x <= 768
@mixin smaller-than-md {
  @include smaller-than(md) {
    @content;
  }
}
// x <= 992
@mixin smaller-than-lg {
  @include smaller-than(lg) {
    @content;
  }
}
// x <= 1200
@mixin smaller-than-xl {
  @include smaller-than(xl) {
    @content;
  }
}
// x <= 1900
@mixin smaller-than-xxl {
  @include smaller-than(xxl) {
    @content;
  }
}

// x >= 480
@mixin larger-than-sm {
  @include larger-than(sm) {
    @content;
  }
}
// x >= 768
@mixin larger-than-md {
  @include larger-than(md) {
    @content;
  }
}
// x >= 992
@mixin larger-than-lg {
  @include larger-than(lg) {
    @content;
  }
}
// x >= 1200
@mixin larger-than-xl {
  @include larger-than(xl) {
    @content;
  }
}
// x >= 1900
@mixin larger-than-xxl {
  @include larger-than(xxl) {
    @content;
  }
}

/*
 * size
 */
$g-header-height: 52px;
$g-footer-height: 80px;
$g-footer-height-mobile: $g-footer-height * 0.8;
$g-navigation-bar-height: 48px;
$g-device-bar-height: 24px;
$g-navigation-drawer-width: 200px;
$g-flex-card-min-width: 160px;
$g-flex-card-max-width: 240px;
$g-fixed-card-base-width: 200px;
$g-artwork-base-size: 220px;
// グラデーション自体の横幅
$g-gradation-width: min(1.5vw, 16px);
$g-page-side-margin: min(2vw, 24px);
$g-explicit-chip-width: 18px;

/**
 * z-index
 */
$__layer-map: (
  // overlay (z-index: 201) 上の modal (z-index: 202) より上にする
  toast: 203,
  loading: 13,
  modal: 12,
  front-menu: 11,
  overlay: 10,
  menu: 9,
  fab: 5,
  header: 4,
  navigation-drawer: 4,
  footer: 4,
  floating-button: 3,
  tab: 3,
  text-gradation: 2,
);

@function z-index-of($key) {
  @return map-get($__layer-map, $key);
}

@mixin no-scroll-bar() {
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar,
  &::-webkit-scrollbar-track,
  &::-webkit-scrollbar-thumb {
    display: none;
  }
}

/**
 * フェードイン・フェードアウト
 */
@mixin fade-transition($seconds: 0.3) {
  .fade-enter-active,
  .fade-leave-active {
    transition: opacity #{$seconds}s;
  }

  .fade-enter,
  .fade-leave-to {
    opacity: 0;
  }
}

/**
 * テキストを流す
*/
@mixin marquee-animation() {
  @keyframes marquee {
    from {
      transform: translateX(0%);
    }

    to {
      transform: translateX(-100%);
    }
  }
}

/*
 * 両端の影を疑似要素で表現
 */
@mixin edge-gradation($to-left-or-right, $color, $width) {
  display: block;
  position: absolute;
  top: 0;
  height: 100%;
  width: calc(#{$width} + 1px);
  content: "";
  background-image:
    linear-gradient(
      to #{$to-left-or-right},
      rgba($color, 1),
      rgba($color, 0),
    );
  z-index: z-index-of(text-gradation);
}

@mixin side-gradation($color: $g-background-color, $width: $g-gradation-width) {
  // 左のグラデーション
  &::before {
    // to right
    @include edge-gradation(right, $color, $width);
    // @todo 少しはみでてしまうのを調整している
    left: -1px;
  }

  // 右のグラデーション
  &::after {
    // to left
    @include edge-gradation(left, $color, $width);
    // @todo 少しはみでてしまうのを調整している
    right: -1px;
  }
}

// scss module では .v-row-group__header が効かない
@mixin v-data-table-height($height: 44px) {
  table {
    tr:not(.v-row-group__header) {
      td {
        height: $height !important;
      }
    }
  }
}

/**
 * pages
 */
// 基本的に全ページに適用
@mixin page-margin($additional: 0, $side-ratio: 1) {
  @if ($additional == 0) {
    margin: 16px calc((#{$g-page-side-margin}) * #{$side-ratio}) 0;
  }

  @else {
    margin: 16px calc((#{$g-page-side-margin} * #{$side-ratio}) + #{$additional}) 0;
  }
}

@mixin __side-padding($padding) {
  padding-left: $padding;
  padding-right: $padding;
}

// ディスプレイサイズを大きくすると横の余白も大きくする
@mixin page-padding($ratio: 1) {
  @include smaller-than-sm() {
    @include __side-padding(0);
  }

  @include larger-than-md() {
    @include __side-padding(min(#{0.5vw * $ratio}, 8px));
  }

  @include larger-than-lg() {
    @include __side-padding(#{1.5vw * $ratio});
  }

  @include larger-than-xl() {
    @include __side-padding(#{4vw * $ratio});
  }

  @include larger-than-xxl() {
    @include __side-padding(#{6vw * $ratio});
  }
}

@mixin page-title() {
  line-height: 1.2em;
  margin: 0.3em 0;

  @include smaller-than-md() {
    font-size: 1.75em;
    text-align: center;
  }

  @include larger-than-md() {
    font-size: 2em;
  }
}

@mixin page-header($artwork-size: $g-artwork-base-size) {
  @include smaller-than-md() {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  @include larger-than-md() {
    display: grid;
    grid-template-columns: $artwork-size auto;
    column-gap: 24px;
  }
}

@mixin page-info() {
  display: flex;
  flex-direction: column;
  align-items: flex-start;

  @include smaller-than-md() {
    margin-top: 12px;
    align-items: center;
  }

  @include larger-than-md() {
    justify-content: flex-end;
  }
}

@mixin page-header-buttons($has-next-content: false) {
  display: flex;
  flex-wrap: nowrap;

  @include smaller-than-md() {
    justify-content: center;
  }

  @if ($has-next-content) {
    @include larger-than-md() {
      margin-right: 24px;
    }
  }

  & > *:not(:last-child) {
    margin-right: 12px;
  }
}

/*
 * ヘッダーの portal に表示させるボタン
 */
@mixin global-fab() {
  display: flex;
  flex-wrap: nowrap;

  & > *:not(:last-child) {
    margin-right: 8px;
  }
}

